created 3 figures made script for movement and rotation need to crate spawner for figures
need to crate spawner for figures

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\scrips\collectableTrigger.cs" />
     <Compile Include="Assets\scrips\colliderScaler.cs" />
     <Compile Include="Assets\scrips\dataStorage.cs" />
+    <Compile Include="Assets\scrips\figureMove.cs" />
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\loadSceneTrigger.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
