--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,12 +63,11 @@
   <ItemGroup>
     <Compile Include="Assets\scrips\collectablesSpawner.cs" />
     <Compile Include="Assets\scrips\collectableTrigger.cs" />
-    <Compile Include="Assets\scrips\colliderScaler.cs" />
-    <Compile Include="Assets\scrips\dataStorage.cs" />
     <Compile Include="Assets\scrips\figureMove.cs" />
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\loadSceneTrigger.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
+    <Compile Include="Assets\scrips\ObstaclesSpawner.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
     <Compile Include="Assets\scrips\timer.cs" />
     <Compile Include="Assets\scrips\wallMove.cs" />
