--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,10 +63,13 @@
   <ItemGroup>
     <Compile Include="Assets\scrips\collectablesSpawner.cs" />
     <Compile Include="Assets\scrips\collectableTrigger.cs" />
+    <Compile Include="Assets\scrips\emoteCryingTrigger.cs" />
+    <Compile Include="Assets\scrips\emoteHappyTrigger.cs" />
+    <Compile Include="Assets\scrips\emoteNeutralTrigger.cs" />
+    <Compile Include="Assets\scrips\emoteSadTrigger.cs" />
     <Compile Include="Assets\scrips\figureMove.cs" />
     <Compile Include="Assets\scrips\fullSpaceBonusSpawner.cs" />
     <Compile Include="Assets\scrips\fullSpaceBonusTrigger.cs" />
-    <Compile Include="Assets\scrips\fullSpaceBonuTtrigger.cs" />
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\loadSceneTrigger.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
