--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\scrips\animationScript.cs" />
     <Compile Include="Assets\scrips\figureMove.cs" />
     <Compile Include="Assets\scrips\joystick\joystickMove.cs" />
+    <Compile Include="Assets\scrips\loadingScreenAsyncSceneLoad.cs" />
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
