--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\scrips\movePlayer.cs" />
     <Compile Include="Assets\scrips\pauseButton.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
+    <Compile Include="Assets\scrips\ResetTrigger.cs" />
     <Compile Include="Assets\scrips\resumeButton.cs" />
     <Compile Include="Assets\scrips\spawners\collectablesSpawner.cs" />
     <Compile Include="Assets\scrips\spawners\fullSpaceBonusSpawner.cs" />
