--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\scrips\activateTimer.cs" />
     <Compile Include="Assets\scrips\animation and scene manage\animatorSetTrigger.cs" />
     <Compile Include="Assets\scrips\animation and scene manage\eventSceneLoad.cs" />
+    <Compile Include="Assets\scrips\animation and scene manage\ResetTrigger.cs" />
     <Compile Include="Assets\scrips\cube selection\cubeKeeper.cs" />
     <Compile Include="Assets\scrips\cube selection\cubes.cs" />
     <Compile Include="Assets\scrips\Don't needanimationScript.cs" />
@@ -74,7 +75,6 @@
     <Compile Include="Assets\scrips\movePlayer.cs" />
     <Compile Include="Assets\scrips\pauseButton.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
-    <Compile Include="Assets\scrips\ResetTrigger.cs" />
     <Compile Include="Assets\scrips\resumeButton.cs" />
     <Compile Include="Assets\scrips\spawners\collectablesSpawner.cs" />
     <Compile Include="Assets\scrips\spawners\fullSpaceBonusSpawner.cs" />
