--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,11 +76,14 @@
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
     <Compile Include="Assets\scrips\pauseButton.cs" />
+    <Compile Include="Assets\scrips\playSoundsOnCollision.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
     <Compile Include="Assets\scrips\resetGame.cs" />
     <Compile Include="Assets\scrips\resumeButton.cs" />
+    <Compile Include="Assets\scrips\sliderPlayerPrefs.cs" />
     <Compile Include="Assets\scrips\spawners\collectablesSpawner.cs" />
     <Compile Include="Assets\scrips\spawners\fullSpaceBonusSpawner.cs" />
+    <Compile Include="Assets\scrips\spawners\KEYMANAGER.cs" />
     <Compile Include="Assets\scrips\spawners\ObstaclesSpawner.cs" />
     <Compile Include="Assets\scrips\spawners\wallFreezeBonusSpawner.cs" />
     <Compile Include="Assets\scrips\timer.cs" />
