--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\scrips\loadingScreenAsyncSceneLoad.cs" />
     <Compile Include="Assets\scrips\loadSceneButton.cs" />
     <Compile Include="Assets\scrips\movePlayer.cs" />
+    <Compile Include="Assets\scrips\obastcleSquishGameFinisher.cs" />
     <Compile Include="Assets\scrips\pauseButton.cs" />
     <Compile Include="Assets\scrips\playSoundsOnCollision.cs" />
     <Compile Include="Assets\scrips\quitButton.cs" />
